--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.53.0",
@@ -21,7 +22,11 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "vite": "^5.0.0"
   }
 }
