--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
+    "effect": "^3.19.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^3.0.7",
