--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^3.0.7",
+    "mysql2": "^3.15.3",
     "node-fetch": "^3.3.2",
     "prisma": "^6.19.0",
     "sqlite3": "^5.1.7"
