--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,24 +1,19 @@
-FROM node:18-alpine
+FROM node:18
 
 WORKDIR /app
 
-# Instalar dependências necessárias
-RUN apk add --no-cache python3 make g++
-
-# Instalar Vite globalmente com uma versão específica
-RUN npm install -g vite@4.5.0
-
-COPY package*.json ./
-
-# Instalar dependências ignorando scripts e sem instalar pacotes opcionais
-RUN npm install --ignore-scripts --no-optional
-
+# Copiar o código fonte
 COPY . .
+
+# Limpar cache e reinstalar dependências
+RUN rm -rf node_modules package-lock.json && \
+    npm install && \
+    npm run build
+
+# Instalar um servidor web simples
+RUN npm install -g serve
 
 EXPOSE 5173
 
-ENV HOST=0.0.0.0
-ENV PORT=5173
-
-# Usar o Vite global em vez do local
-CMD ["vite", "--host", "0.0.0.0"]
+# Servir a aplicação construída
+CMD ["serve", "-s", "dist", "-l", "5173"]
