--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: mysql:8.0
@@ -16,6 +14,11 @@ services:
       - db_data:/var/lib/mysql
     networks:
       - controle_net
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   backend:
     build: ./backend
@@ -26,8 +29,15 @@ services:
     env_file:
       - .env
       - ./backend/.env
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 15s
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - controle_net
 
@@ -36,11 +46,12 @@ services:
     container_name: controle_frontend
     restart: always
     ports:
-      - "5173:5173"
+      - "80:80"
     environment:
-      - VITE_API_URL=http://localhost:3001
+      - VITE_API_URL=http://10.10.99.30:3001
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     networks:
       - controle_net
 
