--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "--entrypoints.web.address=:80"
     ports:
       - "80:80"
-      - "8080:8080" # Dashboard Traefik
+      - "8090:8080" # Dashboard Traefik
     networks:
       - controle_overlay
     volumes:
@@ -24,15 +24,14 @@ services:
 db:
   image: mysql:8.0
   command: ["--default-authentication-plugin=mysql_native_password"]
-  environment:
-    MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-    MYSQL_DATABASE: ${MYSQL_DATABASE}
-    MYSQL_USER: ${MYSQL_USER}
-    MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+  env_file:
+    - .env
   volumes:
     - db_data:/var/lib/mysql
   networks:
     - controle_overlay
+  ports:
+    - "3306:3306"  # <--- adiciona isso
   healthcheck:
     test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -p${MYSQL_ROOT_PASSWORD}"]
     interval: 10s
