--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -70,13 +70,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: backend-image
-          path: /tmp/
 
       - name: Download frontend image
         uses: actions/download-artifact@v4
         with:
           name: frontend-image
-          path: /tmp/
 
       - name: Copy images to server
         uses: appleboy/scp-action@v0.1.7
@@ -85,9 +83,8 @@ jobs:
           username: ${{ env.DEPLOY_USER }}
           port: ${{ env.DEPLOY_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "/tmp/backend-image.tar,/tmp/frontend-image.tar"
+          source: "backend-image.tar,frontend-image.tar"
           target: "/tmp/"
-          strip_components: 1
 
       - name: Deploy on Server
         uses: appleboy/ssh-action@v1.0.0
