--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -12,10 +12,10 @@ env:
   DEPLOY_HOST: 10.10.1.222
   DEPLOY_USER: root
   DEPLOY_PORT: 22
-  PROJECT_DIR: /home/admin-ti/controle_material_staging
+  PROJECT_DIR: /home/admin-ti/controle_material
   DOCKER_REGISTRY: 10.10.1.222:5000
-  MYSQL_DATABASE: controle_material_staging
-  STACK_NAME: controle_estoque_staging
+  MYSQL_DATABASE: controle_material
+  STACK_NAME: controle_estoque
 
 jobs:
   test:
@@ -133,7 +133,6 @@ jobs:
     if: github.event_name == 'push'
     environment:
       name: staging
-      url: http://staging.estoque.ti.wasion.com.br
     steps:
       - name: Deploy on Server
         uses: appleboy/ssh-action@v1.0.0
